--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Why you should choose </h2>
-                     <p>making it look like readable hindi. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still </p>
+                     <p>making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still </p>
                   </div>
                </div>
             </div>
